--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
         </div>
 
         <div class="cookie">
-            <a href="https://hop.clickbank.net/?vendor=javaburn&affiliate=wernerpj1&lid=6100&tid=site" class="close-btn cta" id="close">Close</a>
+            <a href="https://morningcoffeeritual.net/rem?hop=wernerpj1" class="close-btn cta" id="close">Close</a>
             <h3>Cookie Policy</h3>
             <p>
-                This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="https://hop.clickbank.net/?vendor=javaburn&affiliate=wernerpj1&lid=6100&tid=site" class="cta">Cookie Policy</a>
+                This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="https://morningcoffeeritual.net/rem?hop=wernerpj1" class="cta">Cookie Policy</a>
             </p>
-            <a href="https://hop.clickbank.net/?vendor=javaburn&affiliate=wernerpj1&lid=6100&tid=site" id="accept" class="btn btn-primary cta">Accept</a>
+            <a href="https://morningcoffeeritual.net/rem?hop=wernerpj1" id="accept" class="btn btn-primary cta">Accept</a>
         </div>
     </div>
 
